src/test/ui/parser/keywords-followed-by-double-colon.stderr
error: expected identifier, found `::`
  --> $DIR/keywords-followed-by-double-colon.rs:14:11
   |
LL |     struct::foo();
   |           ^^ expected identifier

error: expected expression, found keyword `mut`
  --> $DIR/keywords-followed-by-double-colon.rs:18:5
   |
LL |     mut::baz();
   |     ^^^ expected expression

error: aborting due to 2 previous errors

